--- a/index.html
+++ b/index.html
@@ -46,14 +46,7 @@
       <span id="place-address"></span>
     </div>
 
-    <script src='index.js'>
-      // This example requires the Places library. Include the libraries=places
-      // parameter when you first load the API. For example:
-      // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
-
-      
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlmnXhTRjHHmY1SRjiqqZobWGLS1CfkLA&libraries=places&callback=initMap"
+    <script src='/index.js'
         async defer></script>
   </body>
 </html>
