api security work in progress

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       
     </script>
-    <script src='https://maps.googleapis.com/maps/api/js?key=${process.env.API_KEY}&libraries=places&callback=initMap'
+      <script src="<%= htmlWebpackPlugin.options.apiUrl %>"></script> 
         async defer></script>
   </body>
 </html>
