to add firebase accessibility

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       <span id="place-name"  class="title"></span><br>
       <span id="place-address"></span>
     </div>
-
+    <!-- The Firebase scripts MUST be before the src for index.js -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-database.js"></script>
+      
     <script src='index.js'>
       // This example requires the Places library. Include the libraries=places
       // parameter when you first load the API. For example:
