--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Place Autocomplete</title>
+    <title>Park Burlingotn</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -10,6 +10,8 @@
     <div id='header'>
         <img id="logo" src="logo-secondary.png"></img>
         <img id="logo-text" src="logo-text.png"></img>
+        <input type='radio'  id='togglePolygons')>Show Polygons</input>
+        <input type='radio'  id='toggleLineString'>Show LineString</input>
     </div>
     <div class="pac-card" id="pac-card">
         <input id="pac-input" type="text" placeholder="Destination">
