halfway through 10 layer setup

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img id="logo-text" src="logo-text.png"></img>
 
     <label>
-      <button id='handicapOnly'>Handicap Only</button>
+      <button id='toggleHandicapOnly'>Handicap Only</button>
     </label>
 
     <!-- Trigger/Open The Modal -->
@@ -28,15 +28,16 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
+        <input type='checkbox' checked='true' id='toggleHandicap' )>Show Polygons</input>
         <input type='checkbox' checked='true' id='toggleMunicipleGarages' )>Show Polygons</input>
         <input type='checkbox' checked='true' id='togglePrivateGarages'>Show LineString</input>
         <input type='checkbox' checked='true' id='toggleSmartMeters' )>Show SmartMeters</input>
         <input type='checkbox' checked='true' id='toggleCoinOpMeters' )>Show CoinOpMeters</input>
-        <input type='checkbox' checked='true' id='togglePolygons' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='togglePolygons' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='togglePolygons' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='togglePolygons' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='togglePolygons' )>Show Polygons</input>
+        <input type='checkbox' checked='true' id='toggleEVCharge' )>Show Polygons</input>
+        <input type='checkbox' checked='true' id='toggleMotorcycle' )>Show Polygons</input>
+        <input type='checkbox' checked='true' id='toggleBusLargeVehicle' )>Show Polygons</input>
+        <input type='checkbox' checked='true' id='toggleResidential' )>Show Polygons</input>
+        <input type='checkbox' checked='true' id='toggleLoadingUnloading' )>Show Polygons</input>
       </div>
 
     </div>
