--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
   <div id='header'>
     <img id="logo" src="logo-secondary.png"></img>
     <img id="logo-text" src="logo-text.png"></img>
-
-    
-      <button id='toggleHandicapOnly'>Handicap Only</button>
-   
-
+    <button id='toggleHandicapOnly'>Handicap Only</button>
     <!-- Trigger/Open The Modal -->
-    
-      <button id="myBtn">Filters</button>
-   
+    <button id="myBtn">Open Modal</button>
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
@@ -28,43 +22,44 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-        <input type='checkbox' checked='true' id='toggleHandicap' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='toggleMunicipleGarages' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='togglePrivateGarages'>Show LineString</input>
-        <input type='checkbox' checked='true' id='toggleSmartMeters' )>Show SmartMeters</input>
-        <input type='checkbox' checked='true' id='toggleCoinOpMeters' )>Show CoinOpMeters</input>
-        <input type='checkbox' checked='true' id='toggleEVCharge' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='toggleMotorcycle' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='toggleBusLargeVehicle' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='toggleResidential' )>Show Polygons</input>
-        <input type='checkbox' checked='true' id='toggleLoadingUnloading' )>Show Polygons</input>
+        <input type='checkbox' checked='true' id='toggleHandicap' )>Handicap</input>
+        <input type='checkbox' checked='true' id='toggleMunicipleGarages' )>Municiple Garages</input>
+        <input type='checkbox' checked='true' id='togglePrivateGarages'>Private Garages</input>
+        <input type='checkbox' checked='true' id='toggleSmartMeters' )>Smart Meters</input>
+        <input type='checkbox' checked='true' id='toggleCoinOpMeters' )>Coin Only Meters</input>
+        <input type='checkbox' checked='true' id='toggleEVCharge' )>EV Charge Stations</input>
+        <input type='checkbox' checked='true' id='toggleMotorcycle' )>Motorcycle</input>
+        <input type='checkbox' checked='true' id='toggleBusLargeVehicle' )>Bus & Large Vehicle</input>
+        <input type='checkbox' checked='true' id='toggleResidential' )>Residential</input>
+        <input type='checkbox' checked='true' id='toggleLoadingUnloading' )>Loading/Unloading</input>
       </div>
 
     </div>
 
   </div>
-  <div class="pac-card" id="pac-card">
-    <input id="pac-input" type="text" placeholder="Destination">
-  </div>
-  <div id="map"></div>
-  <div id="infowindow-content">
-    <img src="" width="16" height="16" id="place-icon">
-    <span id="place-name" class="title"></span><br>
-    <span id="place-address"></span>
-  </div>
-  <!-- The Firebase scripts MUST be before the src for index.js -->
-  <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-database.js"></script>
 
-  <script src='index.js'>
+    <div class="pac-card" id="pac-card">
+      <input id="pac-input" type="text" placeholder="Destination">
+    </div>
+    <div id="map"></div>
+    <div id="infowindow-content">
+      <img src="" width="16" height="16" id="place-icon">
+      <span id="place-name" class="title"></span><br>
+      <span id="place-address"></span>
+    </div>
+    <!-- The Firebase scripts MUST be before the src for index.js -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-database.js"></script>
+
+    <script src='index.js'>
       // This example requires the Places library. Include the libraries=places
       // parameter when you first load the API. For example:
       // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
-  </script>
-  <script
-    src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBlmnXhTRjHHmY1SRjiqqZobWGLS1CfkLA&libraries=places&callback=initMap'
-    async defer></script>
+    </script>
+    <script
+      src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBlmnXhTRjHHmY1SRjiqqZobWGLS1CfkLA&libraries=places&callback=initMap'
+      async defer></script>
 </body>
 
 </html>
