toggle layer functions ! on off bug remains

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <input type='checkbox' checked='true' id='toggleEVCharge' )>EV Charge Stations</input>
         <input type='checkbox' checked='true' id='toggleMotorcycle' )>Motorcycle</input>
         <input type='checkbox' checked='true' id='toggleBusLargeVehicle' )>Bus & Large Vehicle</input>
-        <input type='checkbox' checked='true' id='toggleResidential' )>Residential</input>
-        <input type='checkbox' checked='true' id='toggleLoadingUnloading' )>Loading/Unloading</input>
+        <input type='checkbox' checked='false' id='toggleResidential' )>Residential</input>
+        <input type='checkbox' checked='false' id='toggleLoadingUnloading' )>Loading/Unloading</input>
       </div>
 
     </div>
