--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img id="logo-text" src="logo-text.png"></img>
     <button id='toggleHandicapOnly'>Handicap Only</button>
     <!-- Trigger/Open The Modal -->
-    <button id="myBtn">Open Modal</button>
+    <button id="myBtn">Filters</button>
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
@@ -30,8 +30,8 @@
         <input type='checkbox' checked='true' id='toggleEVCharge' )>EV Charge Stations</input>
         <input type='checkbox' checked='true' id='toggleMotorcycle' )>Motorcycle</input>
         <input type='checkbox' checked='true' id='toggleBusLargeVehicle' )>Bus & Large Vehicle</input>
-        <input type='checkbox' checked='false' id='toggleResidential' )>Residential</input>
-        <input type='checkbox' checked='false' id='toggleLoadingUnloading' )>Loading/Unloading</input>
+        <input type='checkbox' checked='true' id='toggleResidential' )>Residential</input>
+        <input type='checkbox' checked='true' id='toggleLoadingUnloading' )>Loading/Unloading</input>
       </div>
 
     </div>
