--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <label>
-          <input type='checkbox' checked='true' id='toggleHandicap' )>Handicap</input>
+          <input type='checkbox' checked='true' id='toggleHandicap'>Handicap</input>
         </label>
         <label>
-        <input type='checkbox' checked='true' id='toggleMunicipleGarages' )>Municiple Garages</input>
+        <input type='checkbox' checked='true' id='toggleMunicipleGarages'>Municiple Garages</input>
       </label>
       <label>
         <input type='checkbox' checked='true' id='togglePrivateGarages'>Private Garages</input>
       </label>
       <label>
-        <input type='checkbox' checked='true' id='toggleSmartMeters' )>Smart Meters</input>
+        <input type='checkbox' checked='true' id='toggleSmartMeters'>Smart Meters</input>
       </label>
       <label>
-        <input type='checkbox' checked='true' id='toggleCoinOpMeters' )>Coin Only Meters</input>
+        <input type='checkbox' checked='true' id='toggleCoinOpMeters'>Coin Only Meters</input>
       </label>
       <label>
-        <input type='checkbox' checked='true' id='toggleEVCharge' )>EV Charge Stations</input>
+        <input type='checkbox' checked='true' id='toggleEVCharge'>EV Charge Stations</input>
       </label>
       <label>
-        <input type='checkbox' checked='true' id='toggleMotorcycle' )>Motorcycle</input>
+        <input type='checkbox' checked='true' id='toggleMotorcycle'>Motorcycle</input>
       </label>
       <label>
-        <input type='checkbox' checked='true' id='toggleBusLargeVehicle' )>Bus & Large Vehicle</input>
+        <input type='checkbox' checked='true' id='toggleBusLargeVehicle'>Bus & Large Vehicle</input>
       </label>
       <label>
-        <input type='checkbox' checked='true' id='toggleResidential' )>Residential</input>
+        <input type='checkbox' checked='true' id='toggleResidential'>Residential</input>
          </label>
         <label>
-        <input type='checkbox' checked='true' id='toggleLoadingUnloading' )>Loading/Unloading</input>
+        <input type='checkbox' checked='true' id='toggleLoadingUnloading'>Loading/Unloading</input>
       </label>
       </div>
 
