created images folder, changed charging station icons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div id='header'>
-    <img id="logo" src="logo-secondary.png"></img>
-    <img id="logo-text" src="logo-text.png"></img>
+    <img id="logo" src="images/logo-secondary.png"></img>
+    <img id="logo-text" src="images/logo-text.png"></img>
     <button id='toggleHandicapOnly'>Handicap Only</button>
     <!-- Trigger/Open The Modal -->
     <button id="myBtn">Filters</button>
