add show all button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
   <div id='header'>
     <img id="logo" src="images/logo-secondary.png"></img>
     <img id="logo-text" src="images/logo-text.png"></img>
-    <button id='toggleHandicapOnly'>Handicap Only</button>
+    <label>
+      <button id='toggleHandicapOnly'>Handicap Only</button>
+    </label>
     <!-- Trigger/Open The Modal -->
-    <button id="myBtn">Filters</button>
+    <label>
+      <button id="myBtn">Filters</button>
+    </label>
+    <label>
+      <button id="toggleShowAll">Show All</button>
+    </label>
+
+
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
@@ -26,32 +35,32 @@
           <input type='checkbox' checked='true' id='toggleHandicap'>Handicap</input>
         </label>
         <label>
-        <input type='checkbox' checked='true' id='toggleMunicipleGarages'>Municiple Garages</input>
-      </label>
-      <label>
-        <input type='checkbox' checked='true' id='togglePrivateGarages'>Private Garages</input>
-      </label>
-      <label>
-        <input type='checkbox' checked='true' id='toggleSmartMeters'>Smart Meters</input>
-      </label>
-      <label>
-        <input type='checkbox' checked='true' id='toggleCoinOpMeters'>Coin Only Meters</input>
-      </label>
-      <label>
-        <input type='checkbox' checked='true' id='toggleEVCharge'>EV Charge Stations</input>
-      </label>
-      <label>
-        <input type='checkbox' checked='true' id='toggleMotorcycle'>Motorcycle</input>
-      </label>
-      <label>
-        <input type='checkbox' checked='true' id='toggleBusLargeVehicle'>Bus & Large Vehicle</input>
-      </label>
-      <label>
-        <input type='checkbox' checked='true' id='toggleResidential'>Residential</input>
-         </label>
+          <input type='checkbox' checked='true' id='toggleMunicipleGarages'>Municiple Garages</input>
+        </label>
         <label>
-        <input type='checkbox' checked='true' id='toggleLoadingUnloading'>Loading/Unloading</input>
-      </label>
+          <input type='checkbox' checked='true' id='togglePrivateGarages'>Private Garages</input>
+        </label>
+        <label>
+          <input type='checkbox' checked='true' id='toggleSmartMeters'>Smart Meters</input>
+        </label>
+        <label>
+          <input type='checkbox' checked='true' id='toggleCoinOpMeters'>Coin Only Meters</input>
+        </label>
+        <label>
+          <input type='checkbox' checked='true' id='toggleEVCharge'>EV Charge Stations</input>
+        </label>
+        <label>
+          <input type='checkbox' checked='true' id='toggleMotorcycle'>Motorcycle</input>
+        </label>
+        <label>
+          <input type='checkbox' checked='true' id='toggleBusLargeVehicle'>Bus & Large Vehicle</input>
+        </label>
+        <label>
+          <input type='checkbox' checked='true' id='toggleResidential'>Residential</input>
+        </label>
+        <label>
+          <input type='checkbox' checked='true' id='toggleLoadingUnloading'>Loading/Unloading</input>
+        </label>
       </div>
 
     </div>
