--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
       
     </script>
-    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBlmnXhTRjHHmY1SRjiqqZobWGLS1CfkLA&libraries=places&callback=initMap'
-        async defer></script>
+    <script src=></script>
   </body>
 </html>
