add commercial loading zones only button in filters

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <label>
       <button id='toggleHandicapOnly'>Handicap Only</button>
     </label>
+
+    <label>
+      <button id="toggleShowAll">Show All</button>
+    </label>
     <!-- Trigger/Open The Modal -->
     <label>
       <button id="myBtn">Filters</button>
-    </label>
-    <label>
-      <button id="toggleShowAll">Show All</button>
     </label>
 
 
@@ -60,6 +61,9 @@
         </label>
         <label>
           <input type='checkbox' checked='true' id='toggleLoadingUnloading'>Loading/Unloading</input>
+        </label>
+        <label>
+          <button id="toggleLoadingUnloadingOnly">Show Loading/Unloading Only</button>
         </label>
       </div>
 
