--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id = ui-container>
   <div id="filter-ui">
     <label class="filter-ui-label">
-      <button id='toggleHandicapOnly' class="filter-ui-button">Handicap Only</button>
+      <button id='toggleHandicapOnly' class="filter-ui-button">Off-Street Only</button>
     </label>
 
     <label class="filter-ui-label">
