--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-database.js"></script>
     <script src='databaseManipulation.js'></script>
-    <script src='index.js'>
+    <!-- <script src='index.js'> -->
       // This example requires the Places library. Include the libraries=places
       // parameter when you first load the API. For example:
     </script>
