disclaimer uses accept button

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     <!-- Modal content -->
     <div class="disclaimer-content">
       <div class="disclaimer-header">
-        <span class="disclaimer-close">&times;</span>
+        
         <h2>Disclaimer</h2>
       </div>
       <div class="disclaimer-body">
         <p>For reference purposes only. Please refer to signs at parking location for official City of Burlington ordinance or privately-owned lot policy.</p>
+        <button class="disclaimer-accept">Okay</button>
       </div>
     </div>
 
