fixed src in index.html

--- a/Public/index.html
+++ b/Public/index.html
@@ -127,8 +127,7 @@
   <script src='index.js'></script>
   <!-- // This example requires the Places library. Include the libraries=places
   // parameter when you first load the API. For example: -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlmnXhTRjHHmY1SRjiqqZobWGLS1CfkLA&libraries=places&callback=initMap"
-  async defer>
+  <script src='api.js'>
 
   </script>
 
