all buttons working

--- a/Public/index.html
+++ b/Public/index.html
@@ -40,7 +40,7 @@
     <div id=ui-container>
       <div id="filter-ui">
         <label class="filter-ui-label">
-          <button id='toggleHandicapOnly' class="filter-ui-button">Off-Street Only</button>
+          <button id='toggleOffStreetOnly' class="filter-ui-button">Off-Street Only</button>
         </label>
 
         <label class="filter-ui-label">
