add hours to modal window

--- a/Public/index.html
+++ b/Public/index.html
@@ -76,15 +76,15 @@
                 class="slider round"></span></input>
             </label>
             <label class="switch">
-              <input type='checkbox' checked='true' id='toggleBlueTopMeters'>Blue Top Meters<span
+              <input type='checkbox' checked='true' id='toggleBlueTopMeters'>Blue Top Meters - 3 hours max<span
                 class="slider round"></span></input>
             </label>
             <label class="switch">
-              <input type='checkbox' checked='true' id='toggleBrownTopMeters'>Brown Top Meters<span
+              <input type='checkbox' checked='true' id='toggleBrownTopMeters'>Brown Top Meters - 9 hours max<span
                 class="slider round"></span></input>
             </label>
             <label class="switch">
-              <input type='checkbox' checked='true' id='toggleYellowTopMeters'>Yellow Top Meters<span
+              <input type='checkbox' checked='true' id='toggleYellowTopMeters'>Yellow Top Meters - 30 min max<span
                 class="slider round"></span></input>
             </label>
             <label class="switch">
