add toggle on zoom

--- a/Public/index.html
+++ b/Public/index.html
@@ -107,9 +107,9 @@
               <input type='checkbox' checked='true' id='toggleLoadingUnloading'>Loading/Unloading<span
                 class="slider round"></span></input>
             </label>
-            <label>
+            <!-- <label>
               <button id="toggleLoadingUnloadingOnly">Show Loading/Unloading Only</button>
-            </label>
+            </label> -->
           </div>
         </div>
       </div>
