fixed bug in center point update formula

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id='header'>
         <img id="logo" src="logo-secondary.png"></img>
         <img id="logo-text" src="logo-text.png"></img>
-        <input type='checkbox' checked='true' id='togglePolygons')>Show Polygons</input>
+        <input type='checkbox' checked='true' id='togglePolygons'>Show Polygons</input>
         <input type='checkbox' checked='true' id='toggleLineString'>Show LineString</input>
     </div>
     <div class="pac-card" id="pac-card">
