scroll func added in menu

--- a/Public/index.html
+++ b/Public/index.html
@@ -51,13 +51,12 @@
           <button id="toggleFilters" class="filter-ui-button">Filters</button>
         </label>
 
-
-
         <!-- The Modal -->
         <div id="myModal" class="modal">
 
           <!-- Modal content -->
           <div class="modal-content">
+            <div class="menu">
             <span class="close">&times;</span>
             <label class="switch">
               <input type='checkbox' checked='true' id='toggleHandicap'>Handicap<span
@@ -110,6 +109,7 @@
             <label>
               <button id="toggleLoadingUnloadingOnly">Show Loading/Unloading Only</button>
             </label>
+            </div>
           </div>
         </div>
       </div>
