--- a/Public/index.html
+++ b/Public/index.html
@@ -5,7 +5,7 @@
   <title>Park Burlington</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="/Public/styles.css">
 </head>
 
 <body>
