--- a/Public/index.html
+++ b/Public/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div id='header'>
-    <img id="logo" src="images/logo-secondary.png"></img>
-    <img id="logo-text" src="images/logo-text.png"></img>
+    <img id="logo" src="/Public/images/logo-secondary.png"></img>
+    <img id="logo-text" src="/Public/images/logo-text.png"></img>
 
 
   </div>
@@ -122,10 +122,10 @@
   <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-database.js"></script>
 
-  <script src='index.js'></script>
+  <script src='/Public/index.js'></script>
   <!-- // This example requires the Places library. Include the libraries=places
   // parameter when you first load the API. For example: -->
-  <script src='api.js'>
+  <script src='/Public/api.js'>
 
   </script>
 
