--- a/Public/index.html
+++ b/Public/index.html
@@ -5,13 +5,13 @@
   <title>Park Burlington</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/Public/styles.css">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
 <body>
   <div id='header'>
-    <img id="logo" src="/Public/images/logo-secondary.png"></img>
-    <img id="logo-text" src="/Public/images/logo-text.png"></img>
+    <img id="logo" src="./images/logo-secondary.png"></img>
+    <img id="logo-text" src="./images/logo-text.png"></img>
 
 
   </div>
@@ -122,10 +122,10 @@
   <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-database.js"></script>
 
-  <script src='/Public/index.js'></script>
+  <script src='./index.js'></script>
   <!-- // This example requires the Places library. Include the libraries=places
   // parameter when you first load the API. For example: -->
-  <script src='/Public/api.js'>
+  <script src='./api.js'>
 
   </script>
 
