restored update function

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Park Burlington</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
   </head>
   <body>
     <div id='header'>
