added header links, increased price icon size

--- a/Public/index.html
+++ b/Public/index.html
@@ -10,11 +10,14 @@
 
 <body>
   <div id='header'>
-    <img id="logo" src="./images/logo-secondary.png"></img>
-    <img id="logo-text" src="./images/logo-text.png"></img>
-
-
-  </div>
+  <a href="https://parkburlington.com" id="logo-home-link">
+    <img id="logo" src="./images/logo-secondary.png" alt="park-burlington-logo"></img>
+    <img id="logo-text" src="./images/logo-text.png" alt="park-burlington-logo"></img>
+  </a>
+  <a href="https://parkburlington.com/about-us/" id="about-link">
+    <img id="about-image" src="images/about.png" alt="about">
+  </a>
+</div>
   <div id="disclaimerModal" class="disclaimer">
 
     <!-- Modal content -->
