--- a/Public/index.html
+++ b/Public/index.html
@@ -10,24 +10,25 @@
 
 <body>
   <div id='header'>
-  <a href="https://parkburlington.com" id="logo-home-link">
-    <img id="logo" src="./images/logo-secondary.png" alt="park-burlington-logo"></img>
-    <img id="logo-text" src="./images/logo-text.png" alt="park-burlington-logo"></img>
-  </a>
-  <a href="https://parkburlington.com/about-us/" id="about-link">
-    <img id="about-image" src="images/about.png" alt="about">
-  </a>
-</div>
+    <a href="https://parkburlington.com" id="logo-home-link">
+      <img id="logo" src="./images/logo-secondary.png" alt="park-burlington-logo"></img>
+      <img id="logo-text" src="./images/logo-text.png" alt="park-burlington-logo"></img>
+    </a>
+    <a href="https://parkburlington.com/about-us/" id="about-link">
+      <img id="about-image" src="images/about.png" alt="about">
+    </a>
+  </div>
   <div id="disclaimerModal" class="disclaimer">
 
     <!-- Modal content -->
     <div class="disclaimer-content">
       <div class="disclaimer-header">
-        
+
         <h2>Disclaimer</h2>
       </div>
       <div class="disclaimer-body">
-        <p>For reference purposes only. Please refer to signs at parking location for official City of Burlington ordinance or privately-owned lot policy.</p>
+        <p>For reference purposes only. Please refer to signs at parking location for official City of Burlington
+          ordinance or privately-owned lot policy.</p>
         <button class="disclaimer-accept">Okay</button>
       </div>
     </div>
@@ -39,15 +40,14 @@
     <button id='btnReset'>Reset</button>
   </div>
 
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <div class='menu'>
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div class='menu'>
         <label class="switch">
-          <input type='checkbox' checked='true' id='toggleHandicap'>Handicap<span
-            class="slider round"></span></input>
+          <input type='checkbox' checked='true' id='toggleHandicap'>Handicap<span class="slider round"></span></input>
         </label>
         <label class="switch">
           <input type='checkbox' checked='true' id='toggleMunicipalGarages'>Municipal Garages<span
@@ -97,23 +97,23 @@
     </div>
   </div>
 
-  
+
   <div id="map-and-controls-container">
     <div id="map"></div>
   </div>
-    <div id=ui-container>
-      <div id="filter-ui">
-        <label class="filter-ui-label">
-          <button id='toggleOffStreetOnly' class="filter-ui-button">Off-Street Only</button>
-        </label>
+  <div id=ui-container>
+    <div id="filter-ui">
+      <label class="filter-ui-label">
+        <button id='toggleOffStreetOnly' class="filter-ui-button">Off-Street Only</button>
+      </label>
 
-        <label class="filter-ui-label">
-          <button id="toggleShowAll" class="filter-ui-button">Show All</button>
-        </label>
-        <!-- Trigger/Open The Modal -->
-        <label class="filter-ui-label">
-          <button id="toggleFilters" class="filter-ui-button">Filters</button>
-        </label>
+      <label class="filter-ui-label">
+        <button id="toggleShowAll" class="filter-ui-button">Show All</button>
+      </label>
+      <!-- Trigger/Open The Modal -->
+      <label class="filter-ui-label">
+        <button id="toggleFilters" class="filter-ui-button">Filters</button>
+      </label>
     </div>
   </div>
 
