change infowindow on search and reset button

--- a/Public/index.html
+++ b/Public/index.html
@@ -37,7 +37,7 @@
 
   <div class="pac-card" id="pac-card">
     <input id="pac-input" type="text" placeholder="Destination">
-    <button id='btnReset'>X</button>
+    <button id='btnReset'>Reset</button>
   </div>
 
   <!-- The Modal -->
@@ -120,7 +120,7 @@
   <div id="infowindow-content">
     <!-- <img src="" width="16" height="16" id="place-icon"> -->
     <span id="place-name" class="title"></span><br>
-    <span id="walk-label">Circle ≈ 2 min 🚶</span>
+    <span id="walk-label" class='title'>Circle = 2 min walk to destination</span>
    
   </div>
   <!-- The Firebase scripts MUST be before the src for index.js -->
