changes wth group

--- a/Public/index.html
+++ b/Public/index.html
@@ -37,7 +37,7 @@
 
   <div class="pac-card" id="pac-card">
     <input id="pac-input" type="text" placeholder="Destination">
-    <button id='btnReset'>Reset</button>
+    <button id='btnReset'>X</button>
   </div>
 
   <!-- The Modal -->
