--- a/Public/index.html
+++ b/Public/index.html
@@ -120,7 +120,7 @@
   <div id="infowindow-content">
     <!-- <img src="" width="16" height="16" id="place-icon"> -->
     <span id="place-name" class="title"></span><br>
-    <span id="walk-label" >Circle ≈ 3 min 🚶</span>
+    <span id="walk-label" >Circle ≈ 3 min <strong>🚶</strong></span>
    
   </div>
   <!-- The Firebase scripts MUST be before the src for index.js -->
