--- a/Public/index.html
+++ b/Public/index.html
@@ -24,11 +24,17 @@
     <div class="disclaimer-content">
       <div class="disclaimer-header">
 
-        <h2>Disclaimer</h2>
+        <h2>Welcome to Park Burlington!</h2>
       </div>
       <div class="disclaimer-body">
-        <p>For reference purposes only. Please refer to signs at parking location for official City of Burlington
-          ordinance or privately-owned lot policy.</p>
+        <p>
+          Please note – this map should be used for reference purposes only. Refer to parking signage for official policy and regulations. 
+          </p>
+          <p>
+          Parking rates are listed in $ per hour unless otherwise noted. 
+          </p>
+          <p>
+          Please submit questions or comments at ParkBurlington.com. </p>
         <button class="disclaimer-accept">Okay</button>
       </div>
     </div>
